@@ -2,6 +2,8 @@ breezy-debian (2.8.24) UNRELEASED; urgency=medium
 
   * Support git snapshot id in version strings when merging a snapshot
     from an upstream git repository.
+  * Support finding upstream git revisions by snapshot id in upstream
+    version.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 01 Feb 2019 15:50:52 +0000
 
